--- a/ethers-simple-storage/package.json
+++ b/ethers-simple-storage/package.json
@@ -4,15 +4,21 @@
   "main": "index.ts",
   "license": "MIT",
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.12.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "compile": "yarn solcjs --bin --abi --include-path node_modules/ --base-path . -o . SimpleStorage.sol",
+    "deploy": "yarn ts-node deploy.ts",
+    "encrypt": "yarn ts-node encryptKey.ts"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ethers": "^6.12.0",
+    "fs-extra": "^11.2.0",
     "solc": "^0.8.19"
   }
 }
